Define environment variables in conf file for daemon service to read